[gd_scene load_steps=4 format=3 uid="uid://cei1e8gtakjed"]

[ext_resource type="Script" path="res://Scenes/main_screen.gd" id="1_3k6bo"]
[ext_resource type="PackedScene" uid="uid://digfx032tves5" path="res://Scenes/pedestrian.tscn" id="2_eihxn"]

[sub_resource type="Curve2D" id="Curve2D_fxmm3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_3k6bo")
pedestrian_scene = ExtResource("2_eihxn")

[node name="PedestrianTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PedestrianPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fxmm3")

[node name="PedestrianSpawnLocation" type="PathFollow2D" parent="PedestrianPath"]

[connection signal="timeout" from="PedestrianTimer" to="." method="_on_pedestrian_timer_timeout"]
